# digitalwellbeing-plugin

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appletwidget.cpp  appletwidget.h  datetimewidget.cpp  datetimewidget.h  dbushelper.h  digitalwellbeing.cpp  digitalwellbeing.h  digitalwellbeing.json  digitalwellbeingplugin.cpp  digitalwellbeingplugin.h  fromthemeprovider.h  pluginwidget.cpp  pluginwidget.h  qml  qml.qrc
debian/: README  changelog  control  copyright  menu.ex
misc/: SemicircleText.qml  tst.qml
package/: AppletPopup.qml  BarChart.qml  PieChart.qml  SemicircleText.qml  UsageRanking.qml  digitalWellbeing.qml  metadata.json  utils.js
qml/: Applet.qml  BarChart.qml  PieChart.qml  PluginItem.qml  UsageRanking.qml  main.qml
src/: appletwidget.cpp  appletwidget.h  digitalwellbeingplugin.cpp  digitalwellbeingplugin.h  pluginwidget.cpp  pluginwidget.h
